# bboy

./: CMakeLists.txt  LICENSE  README.md
src/: config.cpp  config.h  hardware_registers.h  main.cpp  memory_regions.h  platform.cpp  platform.h  type_alias.h
src/Core/: cpu.cpp  cpu.h  gameboy.cpp  gameboy.h  ppu.cpp  ppu.h  timers.cpp  timers.h
src/core/: apu.cpp  apu.h  bus.cpp  bus.h  cartridge_slot.cpp  cartridge_slot.h  cpu.cpp  cpu.h  gameboy.cpp  gameboy.h  input.cpp  input.h  memory_bus.cpp  memory_bus.h  mmu.cpp  mmu.h  ppu.h  timers.cpp  timers.h
src/core/apu/: apu.cpp  apu.h  audio_thread.cpp  audio_thread.h  envelope.cpp  envelope.h  envelope_component.cpp  envelope_component.h  noise_channel.cpp  noise_channel.h  pulse_channels.cpp  pulse_channels.h  wave_channel.cpp  wave_channel.h
src/core/cartridge/: cartridge_slot.cpp  cartridge_slot.h  cartridges.cpp  cartridges.h
src/core/ppu/: pixel_fetcher.cpp  pixel_fetcher.h  ppu.cpp  ppu.h
